# django-earth-science

./: .gitignore  CONTRIBUTING.rst  MANIFEST.in  README.md  README_copy.md  docker-compose.yml  manage.py  pyproject.toml  setup.py  stack.development.env  stack.local.env  tasks.py
compose/development/: django  entrypoint  start-django-local
config/: settings.py
docker/: django  docs
docs/: conf.py  geoscience.admin.rst  geoscience.apps.rst  geoscience.conf.rst  geoscience.fields.rst  geoscience.filters.rst  geoscience.geoluminate.rst  geoscience.gis.plates.admin.rst  geoscience.gis.plates.apps.rst  geoscience.gis.plates.models.rst  geoscience.gis.plates.rst  geoscience.gis.plates.tests.rst  geoscience.gis.provinces.admin.rst  geoscience.gis.provinces.apps.rst  geoscience.gis.provinces.models.rst  geoscience.gis.provinces.rst  geoscience.gis.provinces.tests.rst  geoscience.gis.rst  geoscience.gis.utils.rst  geoscience.models.rst  geoscience.rst  geoscience.tests.rst  geoscience.urls.rst  geoscience.utils.rst  index.rst  installation.rst  modules.rst  readme.md  usage.rst
earth_science/: admin.py  apps.py  conf.py  fields.py  filters.py  imports.py  metadata.py  models.py  plugins.py  tables.py  urls.py  utils.py
earth_science/factories/: location.py
earth_science/fixtures/: data_full.json.xz
earth_science/geology/: generic_models.py
example/: apps.py  models.py  tables.py
geoscience/: admin.py  apps.py  conf.py  fields.py  filters.py  geoluminate.py  models.py  urls.py  utils.py
tests/: README.md  dev_urls.py  prod_urls.py  settings.py
(+71 files in other folders)
